--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@ published: true
             {{ site.title_description }}
         </div>
       
-        <!-- <div class="subtitle">
-          <a href="/projects"><h2>Projects</h2></a> -->
+        <div class="subtitle">
+          <a href="/projects"><h2>Projects</h2></a>
          <!-- <a href="https://my.webfol.io/w/NDA4"><h2>Projects</h2></a> -->
           <!-- <nbsp><nbsp>   
-            <a href="/assets/Yury Voloshin Resume.pdf"><h2>Resume</h2></a>
-        </div> -->
+            <a href="/assets/Yury Voloshin Resume.pdf"><h2>Resume</h2></a>-->
+        </div>
       
       {% include social_links.html %}
       </div>
